--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ main{
 aside{
     height: 500px; overflow-y:scroll;
     position: relative;
-    width: 20%;
+    width: 20;
     float: right;
 }
 footer{
